asciidoctor (1.5.4-1) unstable; urgency=medium

  * Team upload
  * New upstream release

 -- Guillaume Grossetie <ggrossetie@gmail.com>  Mon, 29 Feb 2016 17:18:00 +0200

asciidoctor (1.5.3-1) unstable; urgency=medium

  * Team upload
  * New upstream release
    - Includes the manpage backend!
  * Refresh packaging:
    - bump debian/compat to 9
    - reformat debian/control, and add Testsuite: header
    - cleanup debian/rules
  * Patches removed (already applied upstream):
    - require-asciidoctor.patch
    - update-asciidoctor.1-manpage.patch
  * Patches refreshed:
    - data_path.patch
    - lib_directory_in_tests.patch
  * Patches added:
    - skip-asciimath-test.patch: skip test that depends on a library not yet
      in Debian
    - slim-test.patch: fix code logic to not depend on when the slim library
      has been loaded.
    - package-version.patch: allow loading gemspec without lib/ available
  * Added ruby-thread-safe to Build-Depends:
  * Switch running tests to using debian/ruby-tests.rake, making it a symlink
    to the upstream Rakefile which seems reasonable enough.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 17 Nov 2015 11:47:27 -0200

asciidoctor (1.5.2-2) unstable; urgency=medium

  * Include data directory into the package (stylesheets) (Closes: #788052)
  * Require asciidoctor with a non relative path in bin/asciidoctor
    (Closes: #788051)
  * Add Guillaume Grossetie as Uploaders

 -- Guillaume Grossetie <ggrossetie@gmail.com>  Sat, 20 Jun 2015 17:51:58 +0200

asciidoctor (1.5.2-1) unstable; urgency=medium

  [ Sebastien Badia ]
  * Team upload.
  * d/watch: Fall-back to Github (githubredir webservice was discontinued)

  [ Guillaume Grossetie ]
  * Update to Asciidoctor 1.5.2 (Closes: #764664)
  * Bump Standards-Version to 3.9.6, no changes
  * Remove obsolete patches
  * Update patch for updated asciidoctor.1 manpage

 -- Guillaume Grossetie <ggrossetie@gmail.com>  Wed, 27 May 2015 21:31:24 +0200
